# tefri

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  buildheaderonly.py  rebuild.bat  rebuild.sh  runtests.bat  runtests.sh  tefri.hpp
cmakemodules/: sources.cmake  util.cmake
include/: args.h  def.h  flowvalue.h  flowvalue.inc  monad.h  monad.inc  monadbase.h  objectholder.h  objectholder.inc  priority.h  seq.h  tefri.h  tuple.h  tuple.inc
include/detail/: demangle.h  demangle.inc  monad.h  monadimpl.h  monadimpl.inc  monadinvoker.h  monadinvoker.inc  seqmapper.h  typemappermonad.h
include/operator/: construct.inc  destruct.inc  filter.h  filter.inc  map.h  map.inc  mapping.h  mapping.inc  operator.h  unwrap.h  unwrap.inc
include/operator/detail/: unwrap.h  unwrap.inc
include/tefri/: ObjectHolder.h  Operators.h  Pipeline.h  PipelineBuilder.h  tefri.h
include/tefri/detail/: Any.h  ObjectHolder.h  Optional.h  RingQueue.h  UnwrapObjectHolders.h  UnwrapReferenceWrapper.h
include/tefri/operators/: CarryOperator.h  Filter.h  Operator.h  OperatorTemplate.h  TakeLast.h
lib/: metaxxa.hpp
script/: maheo.py
tests/: CMakeLists.txt  TestCarryOperator.h  TestFilter.h  TestObjectHolder.h  TestOperators.h  TestPipeline.h  TestPipelineBuilder.h  TestRingQueue.h  TestTakeLast.h  TestTefri.h  TestUnwrapObjectHolders.h  construct.cpp  destruct.cpp  filter.cpp  main.cpp  map.cpp  mapping.cpp  monad.cpp  testobjectholder.cpp  tests.h  tuple.cpp
tests/src/: main.cpp
